--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 }
 .products {
     margin: auto;
-    width: 350px;
+    height: max-content;
+    width: 50%;
 }
 .products h3{
     font-weight: bold;
@@ -28,4 +29,7 @@ button, input, select, textarea {
 }
 .btn{
     width: 158px;
+}
+#myInput{
+    display: none;
 }
