--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+
+section{
+    margin: 0 auto;
+    width: 435px;
+}
 .logo img{
     display: block;
     margin: 0 auto;
@@ -20,16 +25,59 @@
     padding: 0px;
     display: inline;
 }
-button, input, select, textarea {
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-    padding: 5px;
-    border: 1px solid forestgreen;
+
+.tooltip {
+  position: relative;
+  display: inline-block;
 }
+
 .btn{
-    width: 158px;
+    padding: 10px 50px;
+    border: 2px solid green;
+    background: #fff;
+    width: 150px;
 }
-#myInput{
-   
+.btn:hover{
+        padding: 10px 50px;
+        border: 2px solid gray;
+        background: green;
+        transition: .8s;
+        cursor: pointer;
+}
+.btn-input{
+    padding: 10px 50px;
+    border: 2px solid green;
+    background: #fff;
+}
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
